--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,11 +1,74 @@
 /* CUSTOM STYLE GOES HERE */
+@font-face {
+    font-family: 'AVG';
+    src: url('../fonts/AVGARDN_2.TTF') format('truetype'),
+        /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+@font-face {
+    font-family: 'AVGBLOD';
+    src: url('../fonts/AVGARDD_2.TTF') format('truetype'),
+        /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
     /* outline: 1px solid red; */
+
+
+}
+
+
+.font-avg {
+    font-family: 'AVGBLOD';
+}
+
+.bg-zinc {
+    background-color: var(--p-zinc-900) !important;
 }
 
 .logo-text {
     letter-spacing: 10px;
+}
+
+.navbar .megamenu {
+    padding: 1rem;
+}
+
+.menu-link {
+    color: black;
+    font-weight: 100;
+    text-decoration: none;
+    font-family: 'AVG';
+
+}
+
+.dropdown>a {
+    font-family: 'AVGBLOD';
+
+}
+
+.product-name {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+.product-desc {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.social>a {
+    color: white;
+    font-size: 20px;
 }
